--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ __pycache__/
 /HZ_evolution/outputs/*.pkl
 
 Notebooks/.ipynb_checkpoints/Kepler62f_example-checkpoint.ipynb
+Notebooks/.ipynb_checkpoints/Intro_to_HZ_evolution-checkpoint.ipynb
