minor updates to example

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ __pycache__/
 
 Notebooks/.ipynb_checkpoints/Kepler62f_example-checkpoint.ipynb
 Notebooks/.ipynb_checkpoints/Intro_to_HZ_evolution-checkpoint.ipynb
+**/ipynb_checkpoints/
