--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@ __pycache__/
 Notebooks/.ipynb_checkpoints/Kepler62f_example-checkpoint.ipynb
 Notebooks/.ipynb_checkpoints/Intro_to_HZ_evolution-checkpoint.ipynb
 **/ipynb_checkpoints/
+Notebooks/.ipynb_checkpoints/Intro_to_HZ_evolution-checkpoint.ipynb
+Notebooks/.ipynb_checkpoints/Intro_to_HZ_evolution-checkpoint.ipynb
