--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ Notebooks/.ipynb_checkpoints/Kepler62f_example-checkpoint.ipynb
 Notebooks/.ipynb_checkpoints/Intro_to_HZ_evolution-checkpoint.ipynb
 **/ipynb_checkpoints/
 Notebooks/.ipynb_checkpoints/Intro_to_HZ_evolution-checkpoint.ipynb
+Example_cases/
